@@ -14,9 +14,6 @@
        </body>
 
        <script>
-              document.getElementById('gameViewport').setAttribute('content',
-                 'width=device-width initial-scale=' + 1/window.devicePixelRatio);
-
               function handleMouseDown(evt) {
                 evt.preventDefault();
                 evt.stopPropagation();
